<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:layout_margin="@dimen/activity_margin"
    android:id="@+id/movieLayout"
    android:padding="@dimen/activity_margin">



    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_margin"
        android:layout_alignParentRight="true"
        android:textColor="@color/black"
        android:textSize="@dimen/subhead_size" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/subhead_size"
        />
    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@id/year"
        android:layout_centerInParent="true"
         />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@id/movieImage"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/subhead_size" />




</RelativeLayout>